--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <!-- 第一张 -->
-  <div style="width: 814px;height: 526px;background: #ffffff;padding: 10px 24px 30px 30px;font-size: 10px;font-family: '宋体';border: 1px solid #902121;">
+  <div style="width: 814px;height: 526px;background: #ffffff;padding: 10px 24px 30px 30px;font-size: 10px;font-family: '宋体';border: 1px solid #902121;margin:0 auto;">
     <div style="margin: 0 auto 12px;width:760px;height: 100px;overflow: hidden;">
       <div style="float: left;width: 230px;height: 100%;">
         <dl style="margin: 0;padding: 0;">
@@ -155,7 +155,7 @@
     </div>
   </div>
   <!-- 第二张 -->
-  <div style="width: 795px;background: #ffffff;padding: 55px 35px 30px 38px;font-size: 14px;font-family: '宋体';border: 1px solid #902121;">
+  <div style="width: 795px;background: #ffffff;padding: 55px 35px 30px 38px;font-size: 14px;font-family: '宋体';border: 1px solid #902121;margin:0 auto;">
     <div style="height: 58px;text-align:center;font-size: 20px;font-weight:600;color:#ab6226">
       销售货物或者提供应税劳务、服务清单
     </div>
